# realtime-stream-inference

./: .env.example  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: demo.py
src/realtime_stream_inference/: __init__.py  app.py  detector.py  metrics.py  models.py  pipeline.py  settings.py  sources.py
tests/: test_app.py  test_detector.py  test_metrics.py  test_pipeline.py
