[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-stream-inference"
version = "0.1.0"
description = "Real-time anomaly detection over event streams with backpressure and p99 latency tracking."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Krishna Gove", email = "krishnagove88@gmail.com" }]
keywords = ["streaming", "anomaly-detection", "fastapi", "real-time", "mlops"]

dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
